# portfolio-investing

./: .gitignore  .mcp.json.example  README.md  custom_hrp_portfolio.py  pyproject.toml  requirements.txt
config/: default_config.yaml
docs/: mcp-setup.md
scripts/: run_experiment.py
src/portfolio_investing/: __init__.py
src/portfolio_investing/allocation/: __init__.py  weights.py
src/portfolio_investing/backtest/: __init__.py  engine.py
src/portfolio_investing/clustering/: __init__.py  cluster.py
src/portfolio_investing/rebalance/: __init__.py  rebalancer.py
src/portfolio_investing/reporting/: metrics.py
src/portfolio_investing/risk/: __init__.py  correlation.py
tests/: test_allocation.py  test_clustering.py  test_correlation.py  test_rebalance.py  test_smoke.py
