[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-investing"
version = "0.1.0"
description = "Portfolio investing framework with clustering-based allocation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "yfinance>=0.2.36",
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.scripts]
run-experiment = "portfolio_investing.scripts.run_experiment:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
